--- a/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
+++ b/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
@@ -19,15 +19,16 @@ output:
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
 
-Say you want to map an operation or list of operations across all two-way[^twoway] combinations of a set of variables/columns in a dataframe. For example, you may be doing feature engineering and want to create a set of interaction terms, ratios, etc.^[Though this "throw everything and the kitchen-sink" approach may not always be a good idea.]. You may be interested in computing a summary statistic across all pairwise combinations of a given set of variables[^1]. In some cases there may be an excellent pairwise implementation already available, e.g. R's `cor()` function for computing correlations across your variables. In other cases one may not exist or may not be easy to use. In this post I'll walk through an example[^examples] explaining code and steps for setting-up arbitrary pairwise operations across sets of variables. 
+Say you want to map an operation or list of operations across all two-way[^twoway] combinations of a set of variables/columns in a dataframe. For example, you may be doing feature engineering and want to create a set of interaction terms, ratios, etc.^[Though this "throw everything and the kitchen-sink" approach may not always be a good idea.]. You may be interested in computing a summary statistic across all pairwise combinations of a given set of variables[^1]. In some cases there may be an excellent pairwise implementation already available, e.g. R's `cor()` function for computing correlations^[Or the tidymodels implementation `corrr::correlate()` in the [corrr](https://corrr.tidymodels.org/) package.]. In other cases one may not exist, is not easy to use, or is not in a style you prefer. In this post I'll walk through an example[^examples] explaining code and steps for setting-up arbitrary pairwise operations across sets of variables. 
 
 *I'll break my approach down into several steps:*
 
 I. Nest and pivot  
 II. Expand combinations  
 III. Filter redundancies  
-IV. Perform operations  
-V. Bind back to data  
+IV. Perform operation(s)  
+V. Reshape, re-pivot & unnest  
+VI. Bind back to data  
 
 **Relevant software and style:**
 
@@ -63,7 +64,7 @@ I'll use the ames housing dataset across examples.
 ames <- AmesHousing::make_ames()
 ```
 
-Specifically, I'll focus on ten numeric columns that, based on a random sample of 1000 rows, show the highest correlation^[Using [corrr](https://corrr.tidymodels.org/) package.] with `Sale_Price`[^technical]. 
+Specifically, I'll focus on ten numeric columns that, based on a random sample of 1000 rows, show the highest correlation with `Sale_Price`[^technical]. 
 
 [^technical]: For technical reasons, I also converted all integer types to doubles -- was getting integer overflow problems in later operations before changing. [Thread](https://stackoverflow.com/questions/8804779/what-is-integer-overflow-in-r-and-how-can-it-happen) on integer overflow in R. In this post I'm not taking a disciplined approach to feature engineering, however I did standardize the variables so that variable combinations would at least be starting on a similar scale. 
 
@@ -88,10 +89,12 @@ ames_subset <- select(ames, ames_cols) %>%
 
 ## I. Nest and pivot
 
-There are a variety of ways to make lists into columns within a dataframe. In the example below, I use `summarise_all(ames_subset, list)` to create a one row dataframe where each column corresponds with a list containing a single element -- those individual elements being numeric vectors of length 2930. After nesting, I pivot^[Note that this part of the problem is one where I actually find using `tidyr::gather()` easier -- but I've been forcing myself to switch over to using the `pivot_()` functions over `spread()` and `gather()`.] the columns leaving a two column dataframe. 
+There are a variety of ways to make lists into columns within a dataframe. In the example below, I use `summarise_all(ames_subset, list)` to create a one row dataframe where each column is a list containing a single element and each individual element corresponds with a numeric vector of length 2930. 
 
-* `var` contains the variable name
-* `vector` contains a list where each element holds the associated vector of our data
+After nesting, I pivot^[Note that this part of the problem is one where I actually find using `tidyr::gather()` easier -- but I've been forcing myself to switch over to using the `pivot_()` functions over `spread()` and `gather()`.] the columns leaving a dataframe with two columns: 
+
+* `var` the variable names
+* `vector` a list where each element contains the associated vector
 
 ```{r}
 df_lists <- ames_subset %>% 
@@ -102,7 +105,7 @@ df_lists <- ames_subset %>%
   print()
 ```
 
-See [Pivot and then summarise] for a nearly identical approach with just an altered order of steps. Also see [Nested tibbles] for how you could create a list-column of tibbles^[The more common approach.] rather than vectors. 
+See [Pivot and then summarise] for a nearly identical approach with just an altered order of steps. Also see [Nested tibbles] for how you could create a list-column of dataframes^[The more common approach.] rather than vectors. 
 
 ## II. Expand combinations
 
@@ -116,7 +119,7 @@ df_lists_comb <- expand(df_lists,
 
 See [Expand via join] for an alternative approach using the `dplyr::*_join()` operations.
 
-*You could make a strong case that this step should have been after [III. Filter redundancies]^[As switching these would be more computationally efficient -- see [When is this approach inappropriate?] for notes related to this.]. However putting it beforehand makes the required code easier to write and to follow.*
+*You could make a strong case that this step should be after [III. Filter redundancies]^[As switching these would be more computationally efficient -- see [When is this approach inappropriate?] for notes related to this.]. However putting it beforehand makes the required code easier to write and to read.*
 
 ## III. Filter redundancies
 
@@ -130,7 +133,7 @@ df_lists_comb <- df_lists_comb %>%
   print()
 ```
 
-If your operation of interest is associative^[E.g. multiplication or addition... not subtraction or division.], apply a filter to remove additional redundant combinations. 
+If your operation of interest is associative^[I.e. has the same output regardless of the order of the variables. E.g. multiplication or addition but not subtraction or division.], apply a filter to remove additional redundant combinations. 
 ```{r}
 c_sort_collapse <- function(...){
   c(...) %>% 
@@ -147,15 +150,21 @@ df_lists_comb_as <- df_lists_comb %>%
 
 **Example with summary statistic^[Function(s) that output vectors of length 1 (or less than length of input vectors).]:**
 
-At this point you can easily map any operation across each of the combinations of vectors now represented by each row in your data. For example, let's say we want to compute the p-value for the correlation of each combination[^psych] and then plot the smallest of these onto a bar graph.
+At this point you can map any operation across each of the combinations of vectors contained in each row of your data. For example, let's say we want to compute the p-value of the correlation coefficient for each pair[^psych].
 
-[^psych]: Note that you could also have used `psych::corr.test()` on your original dataframe to accomplish this, see [stack overflow thread](https://stackoverflow.com/questions/13112238/a-matrix-version-of-cor-test).
+[^psych]: Note that the pairwise implementation `psych::corr.test()` could have been used on your original subsetted dataframe, see [stack overflow thread](https://stackoverflow.com/questions/13112238/a-matrix-version-of-cor-test).
 
 ```{r}
-df_lists_comb_as %>% 
+pairs_cor_pvalues <- df_lists_comb_as %>% 
   mutate(cor_pvalue = map2(vector, vector2, cor.test) %>% map_dbl("p.value"),
          vars = fct_reorder(vars, -cor_pvalue)) %>% 
   arrange(cor_pvalue) %>% 
+  print()
+```
+
+For fun, let's plot the most significant associations onto a bar graph.
+```{r}
+pairs_cor_pvalues %>% 
   head(15) %>% 
   mutate(cor_pvalue_nlog = -log(cor_pvalue)) %>% 
   ggplot(aes(x = vars, 
@@ -167,7 +176,7 @@ df_lists_comb_as %>%
   labs(title = "We are confident that garage area and # of garage cars are correlated",
        y = "Negative log of p-value of correlation coefficient",
        x = "Variable combinations",
-       fill = "Too large\nto estimate:")+
+       fill = "Too large to\nmeaningfully\ndifferentiate:")+
   theme(plot.title.position = "plot")
 ```
 
@@ -177,43 +186,72 @@ You could use this approach to calculate any summary statistic. For example, see
 
 Back to the feature engineering example, perhaps we want to calculate the difference and quotient of each combination of our variables.
 ```{r}
-new_features <- df_lists_comb %>% 
+new_features_prep1 <- df_lists_comb %>% 
   mutate(difference = map2(vector, vector2, `-`),
-         ratio = map2(vector, vector2, `/`)) %>% 
-  select(-c(vector, vector2)) %>% 
-  pivot_longer(cols = -contains("var")) %>% 
-  mutate(name_vars = str_c(var, name, var2, sep = ".")) %>% 
-  select(name_vars, everything(), -c(var, var2, vars, name)) %>% 
+         ratio = map2(vector, vector2, `/`))
+```
+
+## V. Reshape, re-pivot & unnest
+
+These steps put our data back into a more traditional form consistent with our starting dataframe/tibble.
+
+**Reshape:**
+
+The goal is to get our dataframe back into a form similar to where it was at the end of [I. Nest and pivot] where we had two columns:
+
+* one with our variable names 
+* a second containing a list-column of vectors
+
+*In this section at the end of each line of code is a number corresponding with the explanations below:*
+
+1. if we had done just one operation, this step would not be needed, but we did multiple operations and hence created multiple list-columns (`difference` and `ratio`) which we need to get into a single list-column
+2. create new variable name that combines constituent variable names with name of transformation
+3. remove old columns
+
+```{r}
+new_features_prep2 <- new_features_prep1 %>% 
+  pivot_longer(cols = c(difference, ratio)) %>% # 1
+  mutate(name_vars = str_c(var, name, var2, sep = ".")) %>% # 2
+  select(name_vars, value) %>% # 3
+  print()
+```
+
+**Re-pivot and unnest:**
+
+Next we simply apply the inverse of those operations performed in [I. Nest and pivot].
+
+```{r}
+new_features <- new_features_prep2 %>% 
   pivot_wider(values_from = value,
-              names_from = name_vars) %>% 
+              names_from = name_vars) %>%
   unnest(cols = everything())
 ```
 
-## V. Bind back to data
+The new features will add a good number of columns onto our original dataset^[Did not print this output because cluttered-up page with so many column names.].
+```{r}
+dim(new_features)
+```
 
-I then bind the new features back onto the original data -- adding a lot more columns.
+## VI. Bind back to data
+
+I then bind the new features back onto the original subsetted dataframe.
 ```{r}
 ames_data_features <- bind_cols(ames_subset, new_features)
-
-dim(ames_data_features)
 ```
 
 At which point I could do further exploring, feature engineering, model building, etc.
 
 # Functionalize
 
-I put these steps (for the transformation of pairwise columns operation) into a few functions found at [this gist](https://gist.github.com/brshallo/f92a5820030e21cfed8f823a6e1d56e1)^[Steps I - III and V are essentially direct copies of the code above. The approach I took with Step V may take more effort to follow as requires understanding a little `rlang` and could likely have been done more simply.]. 
+I put these steps into a few functions found at [this gist](https://gist.github.com/brshallo/f92a5820030e21cfed8f823a6e1d56e1)^[Steps I - III and V & VI are essentially direct copies of the code above. The approach I took with Step IV may take more effort to follow as it requires understanding a little `rlang` and could likely have been done more simply.]. 
 
 ```{r}
 devtools::source_gist("https://gist.github.com/brshallo/f92a5820030e21cfed8f823a6e1d56e1")
 ```
 
-`operations_combinations()` takes in your dataframe, the set of columns to create pairwise combinations from, and a list of two-argument functions to apply.
+`operations_combinations()` takes in your dataframe, the set of numeric columns to create pairwise combinations from, and a list of functions^[Must have two vectors as input, but do not need to be infix functions.] to apply.
 
 ```{r}
-# just to show can input other (non-infix) functions
-difference_squared <- function(x, y) (x - y)^2
-
 ames_data_features_example <- ames %>% 
   keep(is.numeric) %>% 
   mutate_all(as.double) %>% 
@@ -222,8 +260,9 @@ ames_data_features_example <- ames %>%
 ames_data_features_example <- operations_combinations(
   df = ames_data_features_example,
   one_of(ames_cols),
-  funs = list("/", "-", "difference_squared"),
-  funs_names = list("ratio", "difference", "diffsqd")
+  funs = list("/", "-"),
+  funs_names = list("ratio", "difference"),
+  associative = FALSE
 )
 ```
 
@@ -236,14 +275,14 @@ features_keep <- ames_data_features_example %>%
   pull(key)
 
 set.seed(1234)
-ames_sp_features_subset <- select(ames_data_features_example,
-                                  features_keep) %>% 
+ames_sp_features_subset <- ames_data_features_example %>% 
+  select(features_keep) %>% 
   sample_n(1500)
 ```
 
-Next maybe you are interested in seeing the p-value of the correlation of each of your features with `Sale_Price`.
+Next maybe you are interested in seeing the p-value of the correlation coefficient of each of your features with `Sale_Price`.
 
-Calculate p.values and plot.
+Calculate p.values and plot these on a histogram.
 ```{r}
 ames_sp_features_subset %>% 
   select(-Sale_Price) %>% 
@@ -266,7 +305,7 @@ Tidyverse packages are optimized to be computationally efficient. However operat
 
 * Use heuristics to reduce the number of variables or operations you need to perform (e.g. take a sample, use a preliminary filter, a step-wise like iteration, etc.)
 * Look for packages that abstract the storage and computationally heavy operations away[^2] and then return back an output in a convenient form^[For tidyverse packages, this is often returned into or in the form of a dataframe.]
-* Improve the efficiency of your code (e.g. **filter redundancies** before *rather than* after **expanding combinations**)^[Could make better use of `combn()` function to help.]
+* Improve the efficiency of your code (e.g. *filter redundancies* before rather than after *expanding combinations*)^[Could make better use of `combn()` function to help.]
 * Consider parralelizing
 * Use matrices^[Depending on the complexity may just need to brush-up on your linear algebra.]
 
@@ -279,7 +318,7 @@ However, for many operations...
 * there may not be an efficient pairwise implementation available / accessible
 * the slower computation may not matter or can be mitigated in some way
 
-These situations^[Likely more common for many, if not most, analysts and data scientists.] are where the approaches I walked through are most appropriate.
+These situations^[Likely more common for many, if not most, analysts and data scientists.] are where the approach I walked through is most appropriate.
 
 # Appendix
 
